#+TITLE: AUCTeX NEWS -- History of notable and user-visible changes
#+AUTHOR: AUCTeX Maintenance Team
#+LANGUAGE: en
#+OPTIONS: num:nil toc:nil
# Copyright (C) 2024 Free Software Foundation, Inc.
# License: GNU General Public License 3
# The format is based on [[https://keepachangelog.com/en/1.1.0/][Keep a Changelog]]

* [Unreleased]

* [14.0.6] - 2024-06-30

** Added

- Complete support for in-buffer completion of color support macros.
- Add new support files =style/contract.el=, =style/diagbox.el= and
  =style/standalone.el=.

** Fixed

- Add appropriate ~delete-selection~ properties for
  ~LaTeX-insert-left-brace~, ~TeX-insert-dollar~ and
  ~TeX-insert-backslash~ that differentiate between the "electric" and
  "just-insert-the-symbol" behavior.  That should simplify cooperation
  with other electric modes.

  As a result of this adjustment, the behavior of ~TeX-insert-dollar~
  is affected in some ways:
  - With raw prefix argument =C-u=, =$= (~TeX-insert-dollar~) now
    inserts four dollars as opposed to one.  This behavior is in-line
    with other symbols, in particular ="= (~TeX-insert-quote~) and =\=
    (~TeX-insert-backslash~).  If you need one literal =$=, you can type
    =C-1 $= or =C-q $=.
  - We no longer have explicit support of the special behavior that if
    ~TeX-electric-math~ is non-nil and point is inside math mode right
    between a couple of single dollars, pressing =$= will insert another
    pair of dollar signs and leave the point between them.

    It still works as before if ~TeX-electric-math~ is pair of dollars
    while it inserts =\(= and =\)= when ~TeX-electric-math~ is
    =("\(" . "\)")=.
  - When ~TeX-electric-math~ is a pair of dollars and the point is in
    inline math (without active region), =$= inserts two dollars, not
    one dollar which just closes the math mode.
- Recognize =.ltx= extension as regular LaTeX file.

** Removed

- Delete function ~LaTeX-env-contents~.
- Delete obsolete variables ~TeX-symbol-marker~,